# dbee

./: CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
docs/: settings-storage.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  connection.rs  connections.rs  editor_tabs.rs  mod.rs  query.rs  schema.rs
src/app/: App.tsx  AppLayout.css.ts  AppLayout.tsx  main.tsx
src/components/atoms/: Button.css.ts  Button.tsx
src/components/molecules/: SplitPane.css.ts  SplitPane.tsx  Tabs.css.ts  Tabs.tsx
src/components/organisms/: StatusBar.css.ts  StatusBar.tsx  TitleBar.css.ts  TitleBar.tsx
src/configs/: theme.css.ts
src/features/ai/api/: aiApi.ts
src/features/ai/components/: AiPanel.css.ts  AiPanel.tsx  AiSettings.css.ts  AiSettings.tsx  CodeBlock.css.ts  CodeBlock.tsx
src/features/ai/hooks/: useAiChat.ts
src/features/ai/stores/: aiStore.tsx
src/features/connections/: index.ts
src/features/connections/api/: connectionsApi.ts
src/features/connections/components/: ConnectionCard.css.ts  ConnectionCard.tsx  ConnectionForm.css.ts  ConnectionForm.tsx  ConnectionList.css.ts  ConnectionList.tsx
src/features/connections/hooks/: useConnections.ts
src/features/connections/stores/: connectionsStore.tsx
src/features/editor/api/: editorTabsApi.ts  queryApi.ts
src/features/editor/components/: SqlEditor.css.ts  SqlEditor.tsx
src/hooks/: useTauriInvoke.ts
src/types/: ai.ts  database.ts
(+12 files in other folders)
