[package]
name = "dbee"
version = "0.1.0"
description = "A PostgreSQL database client with powerful SQL editor"
authors = ["you"]
edition = "2021"

[lib]
name = "dbee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
urlencoding = "2.1"
reqwest = { version = ">=0.12, <0.12.20", features = ["json", "rustls-tls"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
